# jhive-previz

./: .gitignore  LICENSE  README.md  base_config.yaml  db_fields.md  db_fields.yaml  fields.yaml  mf_fields.yaml  pyproject.toml
config_files/: abell2744_config.yaml  ceers_config.yaml  dja_fields.yaml  fields.yaml  fields_data.json  gdn_config.yaml  gds_config.yaml  mf_fields.yaml  ngdeep_config.yaml
config_files/v1.0/: abell2744_config.yaml  ceers_config.yaml  gdn_config.yaml  gds_config.yaml  ngdeep_config.yaml
docs/: db_catalogue_fields_table.csv  db_catalogue_fields_table.md  main_catalogue_fields_table.csv  main_catalogue_fields_table.md
jhive_previz/: conversions.py  dataproc.py  db_fields.md  distributions.py  docsutil.py  filterobjects.py  main.py  metadata.py  utils.py
jhive_previz/docs/: dja_catalogue_fields_table.csv  main_catalogue_fields_table.csv  mf_catalogue_fields_table.csv
jhive_previz/metadata/: filter_info.json
metadata/: initial.json
metadata_files/: db_fields.yaml  fields_data.json
metadata_files/v1.0/: db_fields.yaml  dja_fields.yaml  fields_data.json  mf_fields.yaml  umap_fields.yaml
tests/: conftest.py  test-data-2.csv  test-data.csv  test2_fields.yaml  test_catalogue_fields_table.csv  test_config.yaml  test_conversions.py  test_dataproc.py  test_docsutil.py  test_fields.yaml  test_filterobjects.py  test_metadata.py
tests/test_data/: ingest_flags.fits  test-data-2.csv  test-data.csv  test2_fields.yaml  test_catalogue_fields_table.csv  test_config.yaml  test_fields.yaml
