[tool.poetry]
name = "jhive-previz"
version = "0.1.0"
description = ""
authors = ["Jennifer Scora <jscora@sidratresearch.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
astropy = "^6.1.4"
numpy = "^2.1.1"
pandas = "^2.2.3"

[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
ipython = "^8.28.0"
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
